# nixos-discord-bot

./: .envrc  .gitignore  README.md  default.nix  flake.nix  nixos-module.nix  package.nix  pyproject.toml
.github/workflows/: build.yaml
nixos_discord_bot/: __init__.py  __main__.py
nixos_discord_bot/exts/: handler.py  meta.py
nixos_discord_bot/noogle/: __init__.py  __main__.py  types.py
